--- a/css/custom.css
+++ b/css/custom.css
@@ -36,5 +36,9 @@ h1,h2,h3,h4 {
 
 p {
 	font-family: montserrat-regular;
-	color:# 5E4C42
+	color: #5E4C42
+}
+
+.center {
+    text-align: center;
 }
